<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.jeanpigomez.zomatotest.ui.ChooseCityViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCityName"
            android:layout_width="@dimen/full_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_general"
            android:layout_marginStart="@dimen/margin_general"
            android:layout_marginTop="@dimen/til_margin_top_choose_city"
            android:hint="@string/enter_city_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_progress_bar"
            android:text="@string/getting_locations"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/progress_color"
            android:clickable="true"
            android:elevation="@dimen/elevation_progress_background"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:mutableVisibility="@{viewModel.getLoadingVisibility()}" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSearchLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/btn_margin_top_choose_city"
            android:text="@string/search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilCityName" />

    </android.support.constraint.ConstraintLayout>
</layout>
